force-app/main/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add-On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basis_of_Fees__c</fullName>
        <description>Outdated helptext: Select the usage type that the subscription is based on.  If “other” is chosen, text box must be populated.</description>
        <label>Basis of Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Candidates</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
                <value>
                    <fullName>Employees</fullName>
                </value>
                <value>
                    <fullName>Full-Time Equivalents (FTEs)</fullName>
                </value>
                <value>
                    <fullName>Participants</fullName>
                </value>
                <value>
                    <fullName>Assessments and Reports</fullName>
                </value>
                <value>
                    <fullName>CPS Days</fullName>
                </value>
                <value>
                    <fullName>LPS Days</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Cross-sell: subscription</fullName>
                </value>
                <value>
                    <fullName>Existing customer: non-subscription</fullName>
                </value>
                <value>
                    <fullName>New customer: subscription</fullName>
                </value>
                <value>
                    <fullName>New customer: non-subscription</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Renewal/Top up</fullName>
                </value>
                <value>
                    <fullName>PS: non-sub</fullName>
                </value>
                <value>
                    <fullName>Expansion: New customer</fullName>
                </value>
                <value>
                    <fullName>In arrears</fullName>
                </value>
                <value>
                    <fullName>Expansion: Existing customer</fullName>
                </value>
                <value>
                    <fullName>Managed services</fullName>
                </value>
                <value>
                    <fullName>Expansion: New ARR subscriber</fullName>
                </value>
                <value>
                    <fullName>New customer: professional services</fullName>
                </value>
                <value>
                    <fullName>Expansion: Existing ARR subscriber</fullName>
                </value>
                <value>
                    <fullName>Existing customer: professional services</fullName>
                </value>
                <value>
                    <fullName>In advance (Existing customer)</fullName>
                </value>
                <value>
                    <fullName>Addition/Variation</fullName>
                </value>
                <value>
                    <fullName>Renewal/Extension</fullName>
                </value>
                <value>
                    <fullName>Royalties &amp; other</fullName>
                </value>
                <value>
                    <fullName>Other non ARR SaaS</fullName>
                </value>
                <value>
                    <fullName>C&amp;V</fullName>
                </value>
                <value>
                    <fullName>Cross Sell</fullName>
                    <isActive>false</isActive>
                    <label>Cross Sell</label>
                </value>
                <value>
                    <fullName>Cross-sell: non-subscription</fullName>
                    <isActive>false</isActive>
                    <label>Cross-sell: non-subscription</label>
                </value>
                <value>
                    <fullName>In-arrears product</fullName>
                    <isActive>false</isActive>
                    <label>In-arrears product</label>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                    <isActive>false</isActive>
                    <label>New Customer</label>
                </value>
                <value>
                    <fullName>Non-Subscription</fullName>
                    <isActive>false</isActive>
                    <label>Non-Subscription</label>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                    <isActive>false</isActive>
                    <label>Repeat</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Year__c</fullName>
        <label>Contract Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrencyChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if opp line items created from change currency functionality or trigger. This will be true if created from change currency button otherwise false.</description>
        <label>CurrencyChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debooked_Quantity__c</fullName>
        <label>Debooked Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debooked_Sales_Price__c</fullName>
        <label>Debooked Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debooked_Solution_Cap__c</fullName>
        <description>This field is used to store the debooked solution cap for an opportunity line item. The value is further used in the logic to display the remaining debooking scope of the solution cap for that specific opportunity line item</description>
        <label>Debooked Solution Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debooked_Total_Value__c</fullName>
        <description>This field is used to store the debooked amount for an opportunity line item. The value is further used in the logic to display the remaining debooking scope for that specific opportunity line item.</description>
        <label>Debooked Total Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delete_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If opportunity record type changes from GCSC, Standard to Ignite, this gets checked.This is used to delete the product.</description>
        <label>Delete Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <description>This captures the discount value per line, mapped from Configurator i.e the difference of List Price &amp; Sales Price</description>
        <inlineHelpText>This field automatically reflects the discount value calculated using configurator logic or the difference between the unit price and the list price.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>This field captures the discount percentage based on configurator logic or the difference between the unit price and list price.</description>
        <inlineHelpText>This field automatically reflects the discount percentage calculated using configurator logic or the difference between the unit price and the list price.</inlineHelpText>
        <label>Discount %age</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Need__c</fullName>
        <inlineHelpText>The field value will be populated from Rate Card Import.</inlineHelpText>
        <label>Client Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Acquisition</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>TAandTMCombined</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                    <isActive>false</isActive>
                    <label>Mixed</label>
                </value>
                <value>
                    <fullName>Post-Hire</fullName>
                    <isActive>false</isActive>
                    <label>Post-Hire</label>
                </value>
                <value>
                    <fullName>Pre-Hire</fullName>
                    <isActive>false</isActive>
                    <label>Pre-Hire</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imported_from_Rate_Card_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported from Rate Card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_MS_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Identify if the Opportunity line item belongs to MS Category of Products</description>
        <label>Is MS Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Added_From__c</fullName>
        <label>Item Added From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Variation</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Extension Variation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <inlineHelpText>The field value will be populated from Rate Card Import.</inlineHelpText>
        <label>Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>New custom List Price field</description>
        <label>List Price/Basis of Fees</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MS_Product__c</fullName>
        <formula>PricebookEntry.Product2.MS_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Services__c</fullName>
        <label>Number of Service Deliveries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Product__c</fullName>
        <label>Original Opportunity Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Basis of Fees - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Level__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Package Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Offering Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Proposition__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate Essential</fullName>
                </value>
                <value>
                    <fullName>Graduate Advanced</fullName>
                </value>
                <value>
                    <fullName>Graduate Ultimate</fullName>
                </value>
                <value>
                    <fullName>Volume Essential</fullName>
                </value>
                <value>
                    <fullName>Volume Advanced</fullName>
                </value>
                <value>
                    <fullName>Apprentice Essential</fullName>
                </value>
                <value>
                    <fullName>Tech Essential</fullName>
                    <label>Technology Essential</label>
                </value>
                <value>
                    <fullName>Tech Advanced</fullName>
                    <label>Technology Advanced</label>
                </value>
                <value>
                    <fullName>Technology Ultimate</fullName>
                </value>
                <value>
                    <fullName>Managerial Essential</fullName>
                </value>
                <value>
                    <fullName>Managerial Advanced</fullName>
                </value>
                <value>
                    <fullName>Managerial Ultimate</fullName>
                </value>
                <value>
                    <fullName>Video Essential</fullName>
                </value>
                <value>
                    <fullName>Video Advanced</fullName>
                </value>
                <value>
                    <fullName>Video Ultimate</fullName>
                </value>
                <value>
                    <fullName>Professional Essential</fullName>
                </value>
                <value>
                    <fullName>Professional Advanced</fullName>
                </value>
                <value>
                    <fullName>Professional Ultimate</fullName>
                </value>
                <value>
                    <fullName>Core Essential</fullName>
                </value>
                <value>
                    <fullName>Core Advanced</fullName>
                </value>
                <value>
                    <fullName>Core Unit Essential</fullName>
                </value>
                <value>
                    <fullName>Review Essential</fullName>
                </value>
                <value>
                    <fullName>Review Advanced</fullName>
                </value>
                <value>
                    <fullName>Review Ultimate</fullName>
                </value>
                <value>
                    <fullName>Mobilize Essential</fullName>
                </value>
                <value>
                    <fullName>Mobilize Advanced</fullName>
                </value>
                <value>
                    <fullName>Mobilize Ultimate</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Review Essential</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Review Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Central</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>iAssess</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>This field is used to filter the rollup field Opportunity MS Value on opportunity which again is used on the MS Pipeline Job Card. We can not use formula field in filters, that is why i have created this field as text field.</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Services_Stream__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Revenue_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product &amp; Services Stream</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Stream__c</fullName>
        <description>This field holds the value of Stream (Revenue Category) from Product, used in Roll-Up on Opp Header</description>
        <label>Product Stream</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposition__c</fullName>
        <label>Use-case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Careers Hiring</fullName>
                </value>
                <value>
                    <fullName>Volume Hiring</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring</fullName>
                </value>
                <value>
                    <fullName>Managerial Hiring</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership / Executive Hiring </fullName>
                </value>
                <value>
                    <fullName>Professional Hiring</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAG_Indicator__c</fullName>
        <formula>PricebookEntry.Product2.RAG_Indicator__c</formula>
        <label>RAG Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Option_Value__c</fullName>
        <label>RAG Option Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewableNew__c</fullName>
        <label>Renewability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <inlineHelpText>This is a renewable product</inlineHelpText>
        <label>Renewable(depricated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>PS Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Cap__c</fullName>
        <label>Solution Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talent_Level__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Talent Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional / Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Vocational</fullName>
                </value>
                <value>
                    <fullName>Entry Level / Associate</fullName>
                </value>
                <value>
                    <fullName>Graduate and Intern</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor Leader</fullName>
                </value>
                <value>
                    <fullName>Senior leadership</fullName>
                </value>
                <value>
                    <fullName>All Levels</fullName>
                </value>
                <value>
                    <fullName>Entry Level / Apprentice</fullName>
                    <isActive>false</isActive>
                    <label>Entry Level / Apprentice</label>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                    <isActive>false</isActive>
                    <label>Graduate</label>
                </value>
                <value>
                    <fullName>Leader</fullName>
                    <isActive>false</isActive>
                    <label>Leader</label>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                    <isActive>false</isActive>
                    <label>Mixed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Total Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Equivalent_Units__c</fullName>
        <description>Outdated helptext: If Basis of Fees is Candidates, Applications, Assessments, Units - enter the usage cap or usage estimate. If FTEs - enter FTE number used in calculator</description>
        <label>Total Equivalent Units</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>List_Price__c  *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>PricebookEntry.UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Allowance__c</fullName>
        <inlineHelpText>Select if usage is capped or uncapped.</inlineHelpText>
        <label>Usage Allowance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capped</fullName>
                </value>
                <value>
                    <fullName>Uncapped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Cap_or_Estimation__c</fullName>
        <inlineHelpText>If Basis of Fees is Candidates, Applications, Assessments, Units - enter the usage cap or usage estimate.  If FTEs - enter FTE number used in calculator</inlineHelpText>
        <label>Usage Cap or Estimation</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_Discount__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 1 : Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_1_List_Price__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 1 : List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Sales_Price__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 1 : Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Discount__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 2 : Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2_List_Price__c</fullName>
        <description>The Field value will be populated from Rate Card Import only for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 2 : List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Sales_Price__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 2 : Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Discount__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 3 : Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_3_List_Price__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 3 : List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Sales_Price__c</fullName>
        <description>The Field value will be populated from Rate Card Import for Ignite Opportunity.</description>
        <inlineHelpText>The Field value will be populated from Rate Card Import for Ignite Opportunity.</inlineHelpText>
        <label>Year 3 : Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>